[package]
name = "skillet"
version = "0.0.2"
edition = "2021"
description = "Skillet: micro expression language (arithmetic, logical, functions, arrays, conditionals, excel formulas)"
license = "MIT OR Apache-2.0"
readme = "README.md"
# documentation will work after first publish
documentation = "https://docs.rs/skillet"
keywords = ["excel", "formula", "expression", "language", "eval"]

# Keep the published crate small and clean
include = [
  "Cargo.toml",
  "README.md",
  "DOCUMENTATION.md",
  "src/**",
  "tests/**"
]

[lib]
name = "skillet"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
rquickjs = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["plugins"]
plugins = ["rquickjs"]
