[package]
name = "skillet"
version = "0.2.0"
edition = "2021"
description = "Skillet: micro expression language (arithmetic, logical, functions, arrays, conditionals, excel formulas) made in Rust bin cli and server"
license = "MIT OR Apache-2.0"
readme = "README.md"
# documentation will work after first publish
documentation = "https://docs.rs/skillet"
keywords = ["excel", "formula", "expression", "language", "eval"]

# Keep the published crate small and clean
include = [
  "Cargo.toml",
  "README.md",
  "DOCUMENTATION.md",
  "SERVER_USAGE_GUIDE.md",
  "DAEMON_DEPLOYMENT_GUIDE.md",
  "DAEMON_FLAG_GUIDE.md",
  "src/**",
  "tests/**"
]

[lib]
name = "skillet"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
rquickjs = { version = "0.6", optional = true }
# High-performance dependencies
dashmap = "5.5"
threadpool = "1.8"
num_cpus = "1.16"
# Daemon support
libc = "0.2"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["plugins"]
plugins = ["rquickjs"]

# Binary targets
[[bin]]
name = "sk"
path = "src/bin/sk.rs"

[[bin]]
name = "sk_server"
path = "src/bin/sk_server.rs"

[[bin]]
name = "sk_client"
path = "src/bin/sk_client.rs"
