[package]
name = "skillet"
version = "0.5.3"
edition = "2021"
description = "Skillet: micro expression language (arithmetic, logical, functions, arrays, conditionals, excel formulas) made in Rust bin cli and server"
license = "MIT OR Apache-2.0"
readme = "README.md"
# documentation will work after first publish
documentation = "https://docs.rs/skillet"
keywords = ["excel", "formula", "expression", "language", "eval"]

# Keep the published crate small and clean
include = [
  "Cargo.toml",
  "README.md",
  "DOCUMENTATION.md",
  "SERVER_USAGE_GUIDE.md",
  "DAEMON_DEPLOYMENT_GUIDE.md",
  "DAEMON_FLAG_GUIDE.md",
  "openapi.yml",
  "src/**",
  "tests/**"
]

[lib]
name = "skillet"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
rquickjs = { version = "0.9", optional = true }
# High-performance dependencies
dashmap = "6.1"
threadpool = "1.8"
num_cpus = "1.17"
string-interner = "0.17"
typed-arena = "2.0"
beef = "0.5"
# Daemon support
libc = "0.2"
ctrlc = "3.4"
# HTTP server support
urlencoding = "2.1"
lru = "0.12"
once_cell = "1.19"
scalar-doc = "0.1"
jsonpath-rust = "0.5"

[dev-dependencies]
tempfile = "3.21"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["plugins"]
plugins = ["rquickjs"]

# Binary targets
[[bin]]
name = "sk"
path = "src/bin/sk.rs"

[[bin]]
name = "sk_server"
path = "src/bin/sk_server.rs"

[[bin]]
name = "sk_client"
path = "src/bin/sk_client.rs"

[[bin]]
name = "sk_http_server"
path = "src/bin/sk_http_server.rs"

[[bin]]
name = "sk_http_bench"
path = "src/bin/sk_http_bench.rs"

